feat: add field and bytecode position to tree